RESOLVED FIXED211786
[iOS Simulator] TestWebKitAPI._WKDownload.Resume is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=211786
Summary [iOS Simulator] TestWebKitAPI._WKDownload.Resume is a flaky crash
Ryan Haddad
Reported 2020-05-12 10:19:09 PDT
TestWebKitAPI._WKDownload.Resume is a flaky crash on iOS Simulator bots https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI._WKDownload.Resume
Attachments
crash log (101.41 KB, text/plain)
2020-05-12 10:22 PDT, Ryan Haddad
no flags
Patch (1.75 KB, patch)
2020-05-12 14:16 PDT, Alex Christensen
no flags
Patch (1.64 KB, patch)
2020-05-14 10:20 PDT, Alex Christensen
no flags
Patch (4.75 KB, patch)
2020-05-14 17:07 PDT, Alex Christensen
no flags
Ryan Haddad
Comment 1 2020-05-12 10:22:43 PDT
Created attachment 399141 [details] crash log Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 TestWebKitAPI 0x00000001067ed5cf testing::AssertionResult testing::internal::CmpHelperEQ<char, char>(char const*, char const*, char const&, char const&) + 9 (gtest.h:1444) 1 TestWebKitAPI 0x0000000106616b2c _WKDownload_Resume_Test::TestBody() + 3408 (Download.mm:1285) 2 TestWebKitAPI 0x000000010694c589 void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) + 72 3 TestWebKitAPI 0x000000010694c4f2 testing::Test::Run() + 184 4 TestWebKitAPI 0x000000010694ce1f testing::TestInfo::Run() + 199 5 TestWebKitAPI 0x000000010694d437 testing::TestCase::Run() + 249 6 TestWebKitAPI 0x00000001069552b0 testing::internal::UnitTestImpl::RunAllTests() + 668 7 TestWebKitAPI 0x0000000106954efd bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) + 72 8 TestWebKitAPI 0x0000000106954e88 testing::UnitTest::Run() + 108 9 TestWebKitAPI 0x000000010686d706 TestWebKitAPI::TestsController::run(int, char**) + 120 (TestsController.cpp:91) 10 TestWebKitAPI 0x000000010692a74c main + 313 (mainIOS.mm:45) 11 libdyld.dylib 0x0000000111ec110d start + 1
Radar WebKit Bug Importer
Comment 2 2020-05-12 11:45:30 PDT
Ryan Haddad
Comment 3 2020-05-12 11:49:14 PDT
It looks like this test has been flaky since it was added in http://trac.webkit.org/r260518
Alex Christensen
Comment 4 2020-05-12 13:46:16 PDT
fileContents.bytes is null with this crash.
Alex Christensen
Comment 5 2020-05-12 14:16:15 PDT
Alex Christensen
Comment 6 2020-05-12 14:19:52 PDT
Committed initial patch to https://trac.webkit.org/changeset/261579/webkit Leaving open for further investigation into the failure. I bet it's something small like the temp file disappearing or needing to wait until it's done writing or something.
Alex Christensen
Comment 7 2020-05-14 10:20:25 PDT
Even after waiting until there are 10k bytes in the file, the file sometimes disappears underneath us. This is concerning, but it's existing behavior.
Alex Christensen
Comment 8 2020-05-14 10:20:39 PDT
Alex Christensen
Comment 9 2020-05-14 17:07:53 PDT
Geoffrey Garen
Comment 10 2020-05-15 14:26:23 PDT
Comment on attachment 399429 [details] Patch r=me
EWS
Comment 11 2020-05-15 14:32:41 PDT
Committed r261762: <https://trac.webkit.org/changeset/261762> All reviewed patches have been landed. Closing bug and clearing flags on attachment 399429 [details].
Note You need to log in before you can comment on or make changes to this bug.