[iOS Simulator] TestWebKitAPI._WKDownload.Resume is a flaky crash https://bugs.webkit.org/show_bug.cgi?id=211786

Patch by Alex Christensen <achristensen@webkit.org> on 2020-05-15
Reviewed by Geoffrey Garen.

Source/WebCore/PAL:

* pal/spi/cf/CFNetworkSPI.h:
Use CFNetwork SPI to stop it from unlinking the downloaded file after resuming then completing.

Source/WebKit:

* NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(-[WKNetworkSessionDelegate URLSession:downloadTask:didResumeAtOffset:expectedTotalBytes:]):

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/Download.mm:
(TEST):
Add a short sleep (<1/10s) to make this test so it would've almost always failed without this fix.
Checking the file immediately usually succeeded, but waiting a few run loop iterations revealed that CFNetwork
was deleting resumed then finished downloads.

Canonical link: https://commits.webkit.org/224855@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261762 268f45cc-cd09-0410-ab3c-d52691b4dbfc