Source/WebCore/PAL/pal/spi/cf/CFNetworkSPI.h
@@ -425,6 +425,16 @@ WTF_EXTERN_C_END
 - (void)_setCookiesRemovedHandler:(void(^__nullable)(NSArray<NSHTTPCookie*>* __nullable removedCookies, NSString* __nullable domainForRemovedCookies, bool removeAllCookies))cookiesRemovedHandler onQueue:(dispatch_queue_t __nullable)queue;
 @end
 
+@interface __NSCFLocalDownloadFile
+@end
+@interface __NSCFLocalDownloadFile ()
+@property (readwrite, assign) BOOL skipUnlink;
+@end
+
+@interface NSURLSessionDownloadTask ()
+- (__NSCFLocalDownloadFile *)downloadFile;
+@end
+
 @interface NSURLResponse ()
 - (void)_setMIMEType:(NSString *)type;
 @end
